--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
             <i class="fas fa-envelope"></i>
         </div>
     </div>
+
+    <script src="app.js"></script>
+
 </body>
 </html>
 
