--- a/index.html
+++ b/index.html
@@ -11,30 +11,30 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body class="main-content">
-    <header class="section sec1 header active">
+    <header class="section sec1 header active" id="home">
         <!-- Zawartość nagłówka -->
         <h1>Welcome to My Portfolio</h1>
     </header>
     <main>
-        <section class="section sec2 about">
+        <section class="section sec2 about" id="about">
             <!-- Zawartość sekcji about -->
             <h2>About Me</h2>
             <p>Here is some information about me.</p>
         </section>
-        <section class="section sec3 portfolio">
+        <section class="section sec3 portfolio" id="portfolio">
             <!-- Zawartość sekcji portfolio -->
             <h2>My Portfolio</h2>
             <p>Check out my work.</p>
         </section>
         </section>
-        <section class="section sec4 contact">
+        <section class="section sec4 contact" id="contact">
             <!-- Zawartość sekcji contact -->
             <h2>Contact Me</h2>
             <p>Get in touch!</p>
         </section>
     </main>
     <div class="controlls">
-        <div class="control control-1 active-btn">
+        <div class="control control-1 active-btn" data-id="home">
             <i class="fas fa-home"></i>
         </div>
         <div class="control control-2 about-btn" data-id="about">
@@ -52,4 +52,6 @@
 
 </body>
 </html>
+
+
 
